--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
                     </div>
                 </div>
                 <nav>
-                    <a class="nav_link" href="#">ABOUT US</a>
-                    <a class="nav_link" href="#">TOURS</a>
-                    <a class="nav_link" href="#">EXCURSIONS</a>
+                    <a class="nav_link" href="#tours">TOURS</a>
+                    <a class="nav_link" href="#about">ABOUT US</a>
                 </nav>
             </div>
         </div>
     </header>
 
-    <section class="works">
+    <section class="works" id="tours">
         <div class="container">
-
             <div class="box-container">
                 <div class="box">
                     <img src="./images/switzerland.jpg" alt="work logo">
@@ -106,6 +104,16 @@
 
     <section class="image">
         <img src="./images/background.jpg" alt="">
+    </section>
+
+    <section class="about" id="about">
+        <div class="container"> 
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel deserunt voluptates autem? Magni fugit necessitatibus, maxime, dolor mollitia nesciunt eum commodi maiores modi placeat consequatur accusantium suscipit molestiae! Quisquam, maxime?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi odit, adipisci amet esse explicabo eius ullam, expedita dolorem quis aperiam reprehenderit consequatur necessitatibus, minima perferendis illum exercitationem maxime architecto perspiciatis. Nemo tempore esse fuga blanditiis sapiente quidem ullam temporibus. Nobis odio maxime perspiciatis enim quae quidem consequatur reprehenderit blanditiis, nam ipsam cum magnam obcaecati temporibus labore commodi? Magnam dignissimos nulla autem nostrum libero pariatur, sit excepturi consectetur ipsum labore dolorem quibusdam, doloremque et odit laborum qui, tempora soluta ipsa? Id, quibusdam ipsum nulla sunt quas non nesciunt repellendus eum, a ducimus natus deleniti maxime vel. Aliquam adipisci ad natus autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero minima architecto impedit eum laboriosam molestiae quibusdam, perferendis culpa esse sapiente necessitatibus consequatur, maxime quod et labore aperiam quia, commodi aut nulla adipisci? Debitis veritatis quam suscipit laudantium culpa laborum iste at. Est sunt soluta necessitatibus mollitia fugiat cumque deleniti ex, nisi nesciunt sed autem placeat omnis iure quo quidem sequi distinctio hic eaque modi. Modi, sit qui ab magni odit, hic voluptas nostrum ipsum neque totam eveniet ipsam architecto, reprehenderit ratione dolores corporis. Delectus eveniet, quam blanditiis odio autem quis consequatur aut fuga et velit similique sapiente nisi inventore at, nobis eius ullam dicta! Blanditiis debitis, asperiores laboriosam enim dignissimos vero alias. Iure saepe ratione qui error voluptatem. Optio libero possimus, blanditiis maxime minima aliquam veniam rerum doloribus. Ex necessitatibus velit nesciunt, officia voluptas modi nostrum suscipit error minus non ipsa! Commodi quia aut molestias nihil quaerat error itaque voluptate unde natus dolorem est recusandae, odit et necessitatibus accusantium harum ratione doloremque quam debitis praesentium. Deleniti nobis sapiente in et perferendis, voluptate ducimus illo quam corporis aliquid asperiores excepturi voluptatem placeat magnam eius maxime quisquam non sit velit numquam inventore aspernatur ad similique. Quos voluptatum distinctio exercitationem aut nam reiciendis voluptatem excepturi, tempora ipsa incidunt error corporis laudantium temporibus nihil ad odit obcaecati asperiores nesciunt sunt et. Ipsa cum molestiae, quasi voluptatum facilis reiciendis magni sed fugiat. Vero dolorum, maxime voluptates illum, explicabo quaerat libero natus culpa deleniti sequi fuga! Dicta iusto atque reprehenderit odio molestiae porro voluptas quia cumque vero officia nobis, possimus natus, fugit error omnis debitis ratione nostrum eveniet quidem mollitia maiores ad illum commodi sed? Officiis soluta saepe dignissimos fugiat eius suscipit, reiciendis possimus tempore quasi rerum rem deleniti placeat itaque qui, debitis obcaecati quam sapiente. Nobis reiciendis velit sint animi in delectus voluptas ratione beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dignissimos quibusdam accusamus natus, eligendi vitae perspiciatis dolore asperiores commodi quia veniam eveniet provident? Facilis quas nisi suscipit nostrum possimus nesciunt officia, voluptatem, totam quis ratione asperiores, necessitatibus adipisci aspernatur architecto expedita et sit autem corrupti amet itaque porro modi. Obcaecati eius pariatur ab sit! Voluptatem laudantium consectetur sed, quo sit, doloremque ex iste explicabo, iure non velit perferendis ullam repellendus voluptatum quibusdam? Porro iure voluptate tenetur, quod doloremque hic voluptates minima, totam voluptas obcaecati adipisci architecto quas reprehenderit exercitationem autem ea nulla omnis alias praesentium eius! Laborum, aperiam cumque. Delectus praesentium, iste itaque asperiores ducimus similique officiis, ab voluptates repellat corrupti sequi doloribus dicta. Vitae, harum nesciunt. Commodi reiciendis atque eos temporibus eveniet enim, neque necessitatibus, illo et sint in repellendus dolore sunt cumque. Numquam, sunt. Amet impedit tempora temporibus, illo magni, eligendi itaque eius laudantium quas, adipisci necessitatibus nulla in sit dolor rem aspernatur? Error a earum voluptates aliquid nobis, laudantium saepe iste maiores animi placeat vero harum repudiandae perferendis odit nisi pariatur, fuga tempore, quisquam quidem dolorum ipsa? Distinctio perspiciatis placeat asperiores sequi optio alias debitis minus obcaecati suscipit esse unde voluptate nemo, mollitia adipisci tempora impedit aperiam.
+            </p>
+        </div>
+       
     </section>
 
     <footer>
